# BAMIntervalTree

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
doc/: doxygen_cfg
include/: IntervalNode.hpp  Record.hpp
include/bamit/: IntervalNode.hpp  Record.hpp  all.hpp  sample_functions.hpp
src/: CMakeLists.txt  IntervalNode.cpp  Record.cpp  main.cpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt  construction_test.cpp  sample_functions_test.cpp  search_test.cpp  write_read_test.cpp
test/benchmark/: CMakeLists.txt  benchmark_api.cpp  test_htslib.hpp
test/cli/: CMakeLists.txt  cli_test.hpp
test/data/: datasources.cmake  samtools_result.sam  simulated_chr1_small_golden.bam  simulated_chr1_small_golden.bam.bai  simulated_mult_chr_small_golden.bam  simulated_mult_chr_small_golden.bam.bai
